--- a/example.yaml
+++ b/example.yaml
@@ -5,31 +5,80 @@ machine:
     driver: "kvm"
     before:
       - apt-get update
-        #     - apt-get-repository add ppa:jonathonf/firefox-esr-60
     after:
       - apt-get clean
       - echo "Done"
     software:
       firefox: 
         installation:
-        - apt-get install -y firefox
-        - apt-get install -y firefox-esr
-        cpe: "cpe:2.3:a:mozilla:firefox:50.0:*:*:*:*:*:*:*"
+        - apt-get install -y firefox=45.0.2+build1-0ubuntu
+        cpe: "cpe:2.3:a:mozilla:firefox:45.0.0.2:*:*:*:*:*:*:*"
         cve: 
         - CVE-2020-15682 
         - CVE-2020-15684
-          #mysql: 
-          #  installation:
-          #  - apt-get install -y mysql-server 
-          #  cpe: "cpe:2.3:a:oracle:mysql:5.6.0:*:*:*:*:*:*:*"
-          #  cve: 
-          #  - CVE-2020-14893
+      acrobat-reader:
+        installation:
+        - sudo apt install -y gdebi-core libxml2:i386 libcanberra-gtk-module:i386 gtk2-engines-murrine:i386 libatk-adaptor:i386
+        - wget ftp://ftp.adobe.com/pub/adobe/reader/unix/9.x/9.1.1/enu/AdbeRdr9.1.1-1_i386linux_enu.deb
+        - sudo gdebi -n AdbeRdr9.1.1-1_i386linux_enu.deb
+        - rm AdbeRdr9.1.1-1_i386linux_enu.deb
+        cpe: "cpe:2.3:a:adobe:acrobat_reader:9.1.1:*:*:*:*:*:*:*"
+        cve:
+        - CVE-2013-3346
+        - CVE-2013-3342
+        - CVE-2013-3341
+        - CVE-2013-3340
+        - CVE-2013-3339
+        - CVE-2013-3338
+        - CVE-2013-3337
+        - CVE-2013-2737
+        - CVE-2013-2736
+        - CVE-2013-2735
+        - CVE-2013-2734
+        - CVE-2013-2733
+        - CVE-2013-2732
+        - CVE-2013-2731
+        - CVE-2013-2730
+        - CVE-2013-2729
+        - CVE-2013-2727
+        - CVE-2013-2726
+        - CVE-2013-2725
+        - CVE-2013-2724
+        - CVE-2013-2723
+        - CVE-2013-2722
+        - CVE-2013-2721
+        - CVE-2013-2720
+        - CVE-2013-2719
+        - CVE-2013-2718
+      mysql: 
+        installation:
+        - echo "mysql-server-5.7 mysql-server/root_password password root" | sudo debconf-set-selections
+        - echo "mysql-server-5.7 mysql-server/root_password_again password root" | sudo debconf-set-selections
+        - apt-get -y install mysql-server=5.7.11-0ubuntu6
+        cpe: "cpe:2.3:a:oracle:mysql:5.7.11:*:*:*:*:*:*:*"
+        cve: 
+        - CVE-2017-10378
+        - CVE-2017-3331
+        - CVE-2016-5444
+        - CVE-2016-3440
+        - CVE-2016-0667
+        - CVE-2016-0666
+        - CVE-2016-0662
+        - CVE-2016-0659
+        - CVE-2016-0657
+        - CVE-2016-0655
+        - CVE-2016-0648
+        - CVE-2016-0647
+        - CVE-2016-0643      
+        - CVE-2016-0642
+        - CVE-2016-0639
+        - CVE-2016-2047
       virtualbox: 
         installation:
-        - apt-get install -y virtualbox 
-        cpe: "cpe:2.3:a:oracle:virtualbox:4.3.8:*:*:*:*:*:*:*"
+        - apt-get install -y virtualbox=5.0.18-dfsg-2build1 
+        cpe: "cpe:2.3:a:oracle:vm_virtualbox:5.0.18:*:*:*:*:*:*:*"
         cve: 
-        - CVE-2020-14892
+        - CVE-2016-0678
   centos:
     box: "centos/7"
     provider: "libvirt"
@@ -42,7 +91,7 @@ machine:
     software:
       apache: 
         installation:
-        - yum install -y httpd 
+        - yum install -CVE-2013-2718y httpd 
         cpe: "cpe:2.3:a:openbsd:openssh:1.2.1:*:*:*:*:*:*:*"
         cve: 
         - CVE-2020
